--- a/css/master.css
+++ b/css/master.css
@@ -328,6 +328,7 @@ footer {
   height: 90px;
   position: fixed;
   background-color: white;
+  display: table;
   /* The 'About' and 'Guidelines' links -- 'Committees' is separate due to dropdown menu */ }
   .navigation .links {
     display: block;
@@ -336,11 +337,11 @@ footer {
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
-    line-height: 27px;
     letter-spacing: 0em;
     text-align: center;
     padding: 30px 12.5% 30px 30px; }
     .navigation .links a {
+      vertical-align: middle;
       padding: 0 2.5vw 0;
       text-decoration: none; }
       .navigation .links a:hover {
@@ -350,6 +351,7 @@ footer {
 .navigation-committee {
   position: relative;
   display: inline-block;
+  vertical-align: middle;
   /* the individual committee buttons when dropped down */ }
   .navigation-committee .dropbtn {
     font-family: inherit;
@@ -377,7 +379,7 @@ footer {
 /* 'acm at UCLA' logo */
 .navigation-home {
   float: left;
-  padding: 30px 30px 30px 15%; }
+  padding: 25px 0 15px 15%; }
 
 .active {
   color: #3B59ED; }
